# slam_in_autonomous_driving

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh  build_docker.sh  run_docker.sh
cmake/: packages.cmake
config/: mapping.yaml
data/scan_context/: first.csv  first.sc.txt  second.csv  second.sc.txt
scripts/: plot_ndt_score.py
src/: CMakeLists.txt
src/ch10/: fusion.cc  fusion.h
src/ch4/: CMakeLists.txt  ceres_types.h  gins_pre_integ.cc  gins_pre_integ.h  plot_trajectory.py  run_gins_pre_integ.cc
src/ch5/: CMakeLists.txt
src/ch7/: icp_3d.h  icp_3d_ceres.h  ndt_3d.cc  ndt_3d.h
src/ch7/test/: test_icp.cc  test_loosely_lio.cc
src/ch8/: CMakeLists.txt
src/ch8/lio-iekf/: icp_3d_inc.cc  icp_3d_inc.h  lio_iekf.cc  lio_iekf.h
src/ch8/test/: test_lio_iekf.cc  test_lio_preinteg.cc
src/ch9/: CMakeLists.txt  dump_map.cc  frontend.cc  loopclosure.cc  loopclosure.h  split_map.cc
src/common/: CMakeLists.txt  cuda_utils.h  eigen_types.h  sys_utils.h
src/scan_context/: CMakeLists.txt  KDTreeVectorOfVectorsAdaptor.h  nanoflann.hpp  plot_scan_context.py  run_scan_context.cc  scan_context.cc  scan_context.h
src/tools/ui/: pangolin_window.cc  pangolin_window.h  pangolin_window_impl.cc  pangolin_window_impl.h
